# Tracker-stand

./: README.md  face tracking.cpp
Arduino_facetracker/: Arduino_FaceDetection.cpp  CMakeLists.txt  README.md
Arduino_facetracker/Arduino_servo_code/: Arduino_servo_code.ino
Haarcascade face code/: ROS_face_tracking.cpp
Human detection and tracking/: CMakeLists.txt  README.md  main.cpp
Particle filter tracking/: CMakeLists.txt  README.md
Particle filter tracking/sources/: condens.cpp  filter.cpp
Test modules/: face_tracking.cpp
